postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
    namespace: default
    labels:
      app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      restartPolicy: Always
      containers:
        - name: postgres
          image: postgres:12
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pv-volume
      volumes:
        - name: postgres-pv-volume
          persistentVolumeClaim:
            claimName: postgres-pv-claim
