result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: default
  labels:
    app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      restartPolicy: Always
      containers:
      - name: result
        image: epitechcontent/t-dop-600-result:k8s
        resources:
          limits:
            memory: "128M"
        ports:
        - containerPort: 80
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: security
                  operator: In
                  values:
                  - result
              topologyKey: topology.kubernetes.io/zone
