traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      restartPolicy: Always
      containers:
      - name: traefik
        image: traefik:1.7
        resources:
          limits:
            memory: "128M"
            cpu: "500m"
        ports:
          - name: http
            containerPort: 80
          - name: admin
            containerPort: 8080
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: security
                  operator: In
                  values:
                  - poll
                  - result
              topologyKey: topology.kubernetes.io/zone
