redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis_service
  namespace: default
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
