poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  labels:
    name: poll-ingress
spec:
  rules:
  - host: poll.dop.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: poll-ingress
            port:
                number: 80
