result.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  labels:
    name: result-ingress
spec:
  rules:
  - host: result.dop.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
            service:
              name: result-service
              port:
                number: 80
